<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="cn.studyjams.s2.sj0175.findingnankai.MainActivity">


    <!--<com.example.videoinbackground.android.testplayingvideointhebackground.IntroVideoSurfaceView >-->
    <!--包名错误 -->
    <!--</com.example.videoinbackground.android.testplayingvideointhebackground.IntroVideoSurfaceView>-->

    <cn.studyjams.s2.sj0175.findingnankai.IntroVideoSurfaceView
        android:id="@+id/my_video_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#993E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/start_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/start_button_bg"
        android:fontFamily="sans-serif"
        android:onClick="startBtn_OnClick"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="14dp"
        android:text="@string/start_button_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/welcome_heading"
        android:textColor="#FFFFFF"
        android:textSize="64sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_video_view"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"></TextView>

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.29" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="380dp" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="25dp" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="64dp" />

    <Button
        android:id="@+id/exit_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/exit_button_bg"
        android:fontFamily="sans-serif"
        android:onClick="exitBtn_OnClick"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="14dp"
        android:text="@string/exit_button_text"
        android:textColor="#7E57C2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <android.support.constraint.Guideline
        android:id="@+id/h_guideline_startBtn_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="232dp" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline_startBtn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="271dp" />

    <ImageView
        android:id="@+id/start_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/start_icon_description"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline_startBtn_bottom"
        app:layout_constraintLeft_toLeftOf="@+id/v_guideline_01"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline_02"
        app:layout_constraintTop_toTopOf="@+id/h_guideline_startBtn_top"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nku_logo_1200x1200" />


    <ImageView
        android:id="@+id/exit_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/exit_icon_description"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline_01"
        app:layout_constraintLeft_toLeftOf="@+id/v_guideline_01"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline_02"
        app:layout_constraintTop_toTopOf="@+id/h_guideline_02"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/exit_logo_128x128" />

</android.support.constraint.ConstraintLayout>
